# tablevault

./: .gitignore  404.html  CNAME  LICENSE  README.md  TODO.md  Untitled.ipynb  index.html  mkdocs.yml  pyproject.toml  temp.ipynb  test_notebook.ipynb
docs/: index.md  (+1 more)
ml_vault/: __init__.py  ml_vault.py  pyproject.toml  vault.py
ml_vault/database/: artifact_collection.py  artifact_collection_deletion.py  artifact_collection_helper.py  create_database.py  create_views.py  database_restart.py  database_vector_indices.py  database_views.py  description_collection.py  item_collection.py  query_artifact_simple.py  query_collection_simple.py  query_item_simple.py  session_collection.py  timestamp_utils.py
ml_vault/description/: create_description.py
ml_vault/embeddings/: create_embeddings.py
ml_vault/query_TO_DO/: artifact.py  query_helper.py  query_helper_2.py
ml_vault/session/: log_notebook.py  notebook.py  script.py
ml_vault/utils/: constants.py  errors.py  utils.py
tablevault/: __init__.py  _database_lock.py  _file_operations.py  _meta_operations.py  _metadata_store.py  _roll_back_operations.py  _setup_operations.py  _table_execution.py  _table_operations.py  _tablevault.py  _vault_operations.py  cli.py  core.py  errors.py  pyproject.toml  table_vault.py  tablevault.py  types.py  vault.py
tablevault/_DEPRECATED/: cli.py  prompt_parser_common.py
tablevault/_builders/: base_builder_type.py  column_builder_type.py  index_builder_type.py  load_builder.py
tablevault/_code_functions/: categorization_operations.py  open_ai_store.py  table_generation.py  table_manipulation.py
tablevault/_dataframe_helper/: artifact.py  table_operations.py
tablevault/_defintions/: constants.py  prompt_constants.py  step_constants.py  tv_errors.py  types.py
tablevault/_helper/: copy_write_file.py  database_lock.py  file_operations.py  metadata_store.py  table_operations.py  user_lock.py  utils.py
tablevault/_llm_functions/: llm_prompts.py  open_ai_thread.py
tablevault/_operations/: _get_operations.py  _meta_operations.py  _setup_operations.py  _table_execution.py  _takedown_operations.py  _vault_operations.py
tablevault/_prompt_execution/: llm_prompts.py  parse_code.py  parse_llm.py  prompt_parser.py  prompt_parser_table.py
tablevault/_prompt_parsing/: prompt_parser.py  prompt_parser_common.py  prompt_parser_db.py  prompt_parser_table.py  prompt_types.py  types.py
tablevault/_remote_helper/: _remote_save_helper.py  remote_save_process.py
tablevault/_table_reference/: table_reference.py
tablevault/_timing_helper/: read_write_tests.py  timing_helper.py
tablevault/_utils/: _table_operations.py  constants.py  database_lock.py  file_operations.py  metadata_store.py  utils.py
tablevault/analysis/: todo.txt
tablevault/builders/: base_builder_type.py  builder_constants.py  code_builder_type.py  generator_builder_type.py  load_builder.py  open_ai_threads_builder_type.py
tablevault/code_functions/: categorization_operations.py  open_ai_store.py  random_string.py  table_generation.py  table_manipulation.py
tablevault/col_builders/: append_builder_type.py  base_builder_type.py  code_execution_builder_type.py  gen_code_builder_type.py  generator_builder_type.py  load_builder.py  open_ai_threads_builder_type.py
tablevault/database/: create_database.py  database_restart.py  database_vector_indices.py  database_views.py  description_collection.py  item_collection.py  process_collection.py  query_collection_simple.py  query_description.py  query_item_simple.py  (+1 more)
(+338 files in other folders)
