[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tablevault"
version = "0.0.1"
description = "Table Configurationa and Versioning Tool. (OpenAI and CSV files right now.)"
authors = [
    { name = "Jinjin Zhao", email = "j2zhao@uchicago.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["example", "package", "python"]
requires-python = ">=3.11" # la
dependencies = [
    "numpy", # add versioning?
    "pandas",
    "filelock",
    "pyyaml",
    "portalocker", 
    "openai", #maybe make optional in future
    "dataclasses_json",
    "click"
]

# [project.scripts]
# tablevault = "tablevault.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme"
]

[tool.setuptools.package-data]
tablevault = ["col_builders/examples/*.yaml", "helper/examples/example.py"]

[tool.pytest.ini_options]
testpaths = ["tests/api_tests"]
python_files = ["test_*.py"]
