[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mlvault"
version = "0.2.1"
description = "Distribed ML workflow tracking tool."
authors = [
    { name = "Jinjin Zhao", email = "j2zhao@uchicago.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["example", "package", "python"]
requires-python = ">=3.11" 
dependencies = [
    "python-arango"
]


[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mkdocs-material",
    "mike"
]

# [tool.pytest.ini_options]
# testpaths = ["tests/api_tests"]
# python_files = ["test_*.py"]
# markers = [
#     "basic: marks barebone test",
#     "remote: marks remote dir tests"
# ]