[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tablevault"
version = "0.2.2"
description = "Centralized data repository for cross-process data filtering in Python."
authors = [
    { name = "Jinjin Zhao", email = "j2zhao@uchicago.edu" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["example", "package", "python"]
requires-python = ">=3.11" 
dependencies = [
    "python-arango",
    "psutil"
]


[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mkdocs-material",
    "mike"
]

[tool.setuptools.packages.find]
include = ["tablevault*"]
exclude = ["testing*"]

[tool.setuptools_scm]